# ddoc

./: Makefile  Makefile.in  README.md  configure  configure.ac  main.c  notes  todo
src/: Makefile.am  Makefile.in  main.c
